@@ -596,25 +596,16 @@ CloudCmd._ajaxLoad               = function(pFullPath, pOptions){
          /* опредиляем в какой мы панели:
           * правой или левой
           */
-        var lPanel = DOM.getPanel().id,
-            lError;
+        var lPanel = DOM.getPanel().id;
          
         if(!pOptions.refresh && lPanel){
             var lJSON = DOM.Cache.get(lPath);
             
             if (lJSON){
                 /* переводим из текста в JSON */
-                if(window && !window.JSON){
-                    lError = Util.tryCatchLog(function(){
-                        lJSON = eval('('+lJSON+')');
-                    });
-                    
-                }else
-                    lJSON = JSON.parse(lJSON);
-                
+                lJSON = DOM.parseJSON(lJSON);
                 CloudCmd._createFileTable(lPanel, lJSON);
                 CloudCmd._changeLinks(lPanel);
-                
                 
                 return;
             }
