@@ -135,13 +135,13 @@ var CloudCommander, Util,
                 var lJqXHR = pEvent.target,
                     lType = XMLHTTP.getResponseHeader('content-type');
                 
-                if (XMLHTTP.status     === 200 /* OK */){                        
+                if (XMLHTTP.status     === 200 /* OK */){
                     var lData = lJqXHR.response;
                     
-                    /* If it's json - parse it as json */                        
+                    /* If it's json - parse it as json */
                     if(lType && Util.isContainStr(lType, 'application/json') ){
                         var lResult = Util.tryCatch(function(){
-                            lData = JSON.parse(lJqXHR.response);
+                            lData = DOM.parseJSON(lJqXHR.response);
                         });
                         
                         if( Util.log(lResult) )
@@ -804,7 +804,7 @@ var CloudCommander, Util,
             lFunc = function(pData){
                 var lName = DOM.getCurrentName();
                 if( Util.isObject(pData) ){
-                    pData = JSON.stringify(pData, null, 4);
+                    pData = DOM.stringifyJSON(pData);
                     
                     var lExt = '.json';
                     if( !Util.checkExtension(lName, lExt) )
@@ -847,6 +847,32 @@ var CloudCommander, Util,
         }
         
         return lRefresh;
+    };
+    
+    /**
+     * @pJSON
+     */    
+    DOM.parseJSON               = function(pJSON){
+        var lRet;
+        
+        Util.tryCatchLog(function(){
+            lRet = JSON.parse(pJSON);
+        });
+        
+        return lRet;
+    };
+    
+    /**
+     * pObj
+     */
+    DOM.stringifyJSON           = function(pObj){
+        var lRet;
+        
+        Util.tryCatLog(function(){
+            lRet = JSON.stringify(pObj, null, 4);
+        });
+        
+        return lRet;
     };
     
     /**
