@@ -152,6 +152,40 @@ var Util, DOM, $;
     if(!window.XMLHttpRequest)
         DOM.ajax = $.ajax;
     
+    if(!window.JSON){
+        DOM.parseJSON       = $.parseJSON;
+        
+        /* https://gist.github.com/754454 */
+        DOM.stringifyJSON   = function(pObj){
+            var lRet;
+            
+            if (!Util.isObject(pObj) || pObj === null) {
+                // simple data type
+                if (Util.isString(pObj)) pObj = '"' + pObj + '"';
+                lRet =  String(pObj);
+            } else {
+                // recurse array or object
+                var n, v, json = [], isArray = Util.isArray(pObj);
+                
+                for (n in pObj) {
+                    v = pObj[n];
+                    
+                    if (pObj.hasOwnProperty(n)) {
+                        if (Util.isString(v))
+                            v = '"' + v + '"';
+                        else if (Util.isObject(v) && v !== null)
+                            v = DOM.stringifyJSON(v);
+                            
+                        json.push((isArray ? "" : '"' + n + '":') + String(v));
+                    }
+                }
+                lRet = (isArray ? "[" : "{") + String(json) + (isArray ? "]" : "}");
+            }
+            
+            return lRet;
+        };
+    }
+    
     if(!window.localStorage){
         DOM.Cache                   = function(){
             /* приватный переключатель возможности работы с кэшем */
